# sdk-rust

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  MIGRATION.md  README.md  build.rs  justfile
.github/workflows/: ci.yml  docker.yaml  integration.yaml
derive/: Cargo.toml
derive/src/: ast.rs  gen.rs  lib.rs
examples/: cf_workers.rs  counter.rs  cron.rs  failures.rs  fan_out.rs  greeter.rs  interface.rs  my_service.rs  my_virtual_object.rs  my_workflow.rs  restate_attribute_demo.rs  run.rs  schema.rs  signals.rs  tracing.rs
examples/impl_block/: counter.rs  failures.rs  greeter.rs
examples/impl_block/services/: mod.rs
examples/services/: mod.rs  my_service.rs  my_virtual_object.rs  my_workflow.rs
examples/trait_block/: counter.rs  cron.rs  schema.rs  tracing.rs
examples/trait_block/services/: my_workflow.rs
macros/: Cargo.toml
macros/src/: ast.rs  gen.rs  generator.rs  handler.rs  interface.rs  lib.rs  names.rs  service_def.rs  struct_ast.rs  struct_generator.rs
old-src/: lib.rs  state.rs
release-notes/: README.md  v0.8.0.md  v0.9.0.md
restate-test-utils/: Cargo.toml
restate-test-utils/src/: test_utils.rs
src/: cf_workers.rs  configuration.rs  context.rs  discovery.rs  errors.rs  extensions.rs  filter.rs  http.rs  http_server.rs  hyper.rs  ingress.rs  lambda.rs  lib.rs  serde.rs  service.rs  state.rs
src/context/: macro_support.rs  map.rs  mod.rs  request.rs  run.rs  select.rs  select_any.rs
src/endpoint/: builder.rs  context.rs  futures.rs  handler_context.rs  handler_state.rs  mod.rs
src/endpoint/futures/: async_result_poll.rs  durable_future_impl.rs  handler_state_aware.rs  intercept_error.rs  mod.rs  select_poll.rs  trap.rs
src/ingress/: internal.rs  mod.rs  request.rs  result.rs
src/ingress_client/: awakeable.rs  handle.rs  internal.rs  mod.rs  request.rs  result.rs
test-env/: Cargo.toml
test-env/src/: lib.rs
test-env/tests/: test_container.rs
test-services/: Cargo.toml  Dockerfile  README.md  exclusions.yaml
test-services/src/: awakeable_holder.rs  block_and_wait_workflow.rs  cancel_test.rs  counter.rs  failing.rs  kill_test.rs  list_object.rs  main.rs  map_object.rs  mod.rs  non_deterministic.rs  proxy.rs  test_utils_service.rs  virtual_object_command_interpreter.rs
test-services/src/impl_block/: awakeable_holder.rs  cancel_test.rs  counter.rs  failing.rs  kill_test.rs  list_object.rs  main.rs  map_object.rs  non_deterministic.rs  proxy.rs  virtual_object_command_interpreter.rs
test-services/src/trait_block/: block_and_wait_workflow.rs  cancel_test.rs  counter.rs  list_object.rs  main.rs  map_object.rs  non_deterministic.rs  proxy.rs  test_utils_service.rs
testcontainers/: Cargo.toml  README.md
testcontainers/src/: lib.rs
testcontainers/tests/: test_container.rs  test_container_impl_block.rs  test_container_trait_block.rs
tests/: backward_compat_test.rs  cf_workers.rs  compiletest.rs  ingress.rs  restate_attribute_test.rs  schema.rs  service.rs  struct_config.rs  struct_service.rs  test_container.rs
tests/impl_block/: service.rs
tests/impl_block/ui/: shared_handler_in_service.rs  shared_handler_in_service.stderr
tests/trait_block/: schema.rs  service.rs
tests/trait_block/ui/: shared_handler_in_service.rs
tests/ui/: borrowed_extension.rs  borrowed_extension.stderr  invalid_handler_name.rs  invalid_handler_name.stderr  shared_handler_in_service.rs  shared_handler_in_service.stderr  struct_bad_duration.rs  struct_bad_duration.stderr  struct_bad_on_max_attempts.rs  struct_bad_on_max_attempts.stderr  struct_mut_self.rs  struct_mut_self.stderr  struct_too_many_inputs.rs  struct_too_many_inputs.stderr  struct_unknown_option.rs  struct_unknown_option.stderr  struct_workflow_retention_on_handler.rs  struct_workflow_retention_on_handler.stderr  struct_workflow_retention_on_service.rs  struct_workflow_retention_on_service.stderr  struct_wrong_context.rs  struct_wrong_context.stderr
tests/ui/ingress-client/: ingress_client_ext_without_feature.rs  ingress_client_ext_without_feature.stderr
tests/ui/reqwest-client/: reqwest_client_ext_without_feature.rs  reqwest_client_ext_without_feature.stderr
