[package]
name = "restate-sdk"
version = "0.2.1"
edition = "2021"
description = "Restate SDK for Rust"
license = "MIT"
repository = "https://github.com/restatedev/sdk-rust"

[features]
default = ["http_server", "rand", "uuid"]
hyper = ["dep:hyper", "http-body-util", "restate-sdk-shared-core/http"]
http_server = ["hyper", "hyper/server", "hyper/http2", "hyper-util", "tokio/net", "tokio/signal", "tokio/macros"]

[dependencies]
bytes = "1.6.1"
futures = "0.3"
http = "1.1.0"
http-body-util = { version = "0.1", optional = true }
hyper = { version = "1.4.1", optional = true}
hyper-util = { version = "0.1", features = ["tokio", "server", "server-graceful", "http2"], optional = true }
pin-project-lite = "0.2"
rand = { version = "0.8.5", optional = true }
regress = "0.10"
restate-sdk-macros = { version = "0.2.1", path = "macros" }
restate-sdk-shared-core = { version = "0.0.5" }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.63"
tokio = { version = "1", default-features = false, features = ["sync"] }
tower-service = "0.3"
tracing = "0.1"
uuid = { version = "1.10.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
trybuild = "1.0"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8.5"

[build-dependencies]
jsonptr = "0.5.1"
prettyplease = "0.2"
serde_json = { version = "1.0" }
syn = "2.0"
typify = { version = "0.1.0" }

[workspace]
members = ["macros", "test-services"]
