[package]
name = "restate-sdk"
version = "0.3.2"
edition = "2021"
description = "Restate SDK for Rust"
license = "MIT"
repository = "https://github.com/restatedev/sdk-rust"
rust-version = "1.76.0"

[[example]]
name = "tracing"
path = "examples/tracing.rs"
required-features = ["tracing-span-filter"]

[features]
default = ["http_server", "rand", "uuid", "tracing-span-filter"]
hyper = ["dep:hyper", "http-body-util", "restate-sdk-shared-core/http"]
http_server = ["hyper", "hyper/server", "hyper/http2", "hyper-util", "tokio/net", "tokio/signal", "tokio/macros"]
tracing-span-filter = ["dep:tracing-subscriber"]

[dependencies]
bytes = "1.10"
futures = "0.3"
http = "1.3"
http-body-util = { version = "0.1", optional = true }
hyper = { version = "1.6", optional = true}
hyper-util = { version = "0.1", features = ["tokio", "server", "server-graceful", "http2"], optional = true }
pin-project-lite = "0.2"
rand = { version = "0.9", optional = true }
regress = "0.10"
restate-sdk-macros = { version = "0.3", path = "macros" }
restate-sdk-shared-core = { version = "0.3.0", features = ["request_identity", "sha2_random_seed", "http"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", default-features = false, features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"], optional = true }
uuid = { version = "1.16.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
trybuild = "1.0"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.9"

[build-dependencies]
jsonptr = "0.5.1"
prettyplease = "0.2"
serde_json = { version = "1.0" }
syn = "2.0"
typify = { version = "0.1.0" }

[workspace]
members = ["macros", "test-services", "test-env"]
