[package]
name = "restate-sdk"
version = "0.6.0"
edition = "2021"
description = "Restate SDK for Rust"
license = "MIT"
repository = "https://github.com/restatedev/sdk-rust"
rust-version = "1.76.0"

[[example]]
name = "tracing"
path = "examples/tracing.rs"
required-features = ["tracing-span-filter"]

[[example]]
name = "schema"
path = "examples/schema.rs"
required-features = ["schemars"]

[[example]]
name = "cf_workers"
path = "examples/cf_workers.rs"
required-features = ["cf_workers"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["http_server", "rand", "uuid", "tracing-span-filter"]
cf_workers = ["worker", "web-sys", "http-body-util", "getrandom"]
hyper = ["dep:hyper", "http-body-util", "restate-sdk-shared-core/http"]
http_server = ["hyper", "hyper/server", "hyper/http2", "hyper-util", "tokio/net", "tokio/signal", "tokio/macros"]
tracing-span-filter = ["dep:tracing-subscriber"]

[dependencies]
bytes = "1.10"
futures = "0.3"
http = "1.3"
http-body-util = { version = "0.1", optional = true }
pin-project-lite = "0.2"
rand = { version = "0.9", optional = true }
regress = "0.10"
restate-sdk-macros = { version = "0.6", path = "macros" }
restate-sdk-shared-core = { version = "=0.4.0", features = ["request_identity", "sha2_random_seed", "http"] }
schemars = { version = "1.0.0-alpha.17", optional = true }
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", default-features = false, features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"], optional = true }
uuid = { version = "1.16.0", optional = true }
web-sys = {version = "0.3.70", optional = true}
worker = {version = "0.6.0", features=["http"], optional = true }
hyper = { version = "1.6", optional = true}
hyper-util = { version = "0.1", features = ["tokio", "server", "server-graceful", "http2"], optional = true }
getrandom = { version = "0.3.3", features = ["wasm_js"], optional = true}
futures-util = "0.3.31"
wasm-streams = "0.4.2"
async-stream = "0.3.6"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
trybuild = "1.0"
rand = "0.9"
schemars = "1.0.0-alpha.17"
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
jsonptr = "0.5.1"
prettyplease = "0.2"
serde_json = { version = "1.0" }
syn = "2.0"
typify = { version = "0.1.0" }

[workspace]
members = ["macros", "test-services", "testcontainers"]
