[package]
name = "restate-sdk-macros"
version = "0.3.2"
edition = "2021"
description = "Restate SDK for Rust macros"
license = "MIT"
repository = "https://github.com/restatedev/sdk-rust"

[lib]
proc-macro = true

[features]
ingress_client = []

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
