[package]
name = "restate-sdk-macros"
version = "0.7.0"
edition = "2024"
description = "Restate SDK for Rust macros"
license = "MIT"
repository = "https://github.com/restatedev/sdk-rust"
rust-version = "1.85.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
