[package]
name = "restate-test-utils"
version = "0.3.2"
edition = "2021"
description = "Test Utilities for Restate SDK for Rust"
license = "MIT"
repository = "https://github.com/restatedev/sdk-rust/test-utils"
rust-version = "1.76.0"


[dependencies]
futures = "0.3.31"
http = "1.2.0"
nu-ansi-term = "0.50.1"
reqwest = {version= "0.12.12", features = ["json"]}
restate-sdk = { version = "0.3.2", path = ".." }
restate-sdk-shared-core = "0.2.0"
serde = "1.0.217"
serde_json = "1.0.138"
testcontainers = "0.23.1"
tokio = "1.43.0"
