[package]
name = "restate-sdk-test-env"
version = "0.4.0"
edition = "2021"
description = "Test Utilities for Restate SDK for Rust"
license = "MIT"
repository = "https://github.com/restatedev/sdk-rust"
rust-version = "1.76.0"


[dependencies]
anyhow = "1.0.95"
nu-ansi-term = "0.50.1"
reqwest = { version= "0.12.12", features = ["json"] }
restate-sdk = { version = "0.4.0", path = "../" }
serde = "1.0.217"
serde_json = "1.0.138"
testcontainers = "0.23.1"
tokio = "1.43.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
