[package]
name = "restate-sdk-testcontainers"
version = "0.8.0"
edition = "2024"
description = "Restate SDK Testcontainers utilities"
license = "MIT"
repository = "https://github.com/restatedev/sdk-rust"
rust-version = "1.85.0"


[dependencies]
anyhow = "1.0"
futures = "0.3"
reqwest = { version= "0.13", features = ["json"] }
restate-sdk = { version = "0.8.0", path = "../" }
serde = "1.0"
testcontainers = { version = "0.27", features = ["http_wait"] }
tokio = "1.49"
tracing = "0.1"
tracing-subscriber = "0.3"
